<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fui_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/FirebaseUI.WrapperStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fui_status_bar"
        android:orientation="vertical">

        <TextView
            style="@style/TitleText"
            android:text="@string/fui_forgot_password"/>

        <TextView
            style="@style/FirebaseUI.Text.BodyText"
            android:text="@string/fui_password_recovery_body" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/FirebaseUI.TextInputLayout.EmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/FirebaseUI.TextInputEditText.EmailField" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_done"
            style="@style/FirebaseUI.Button.Dark"
            android:layout_marginTop="6dp"
            android:text="@string/fui_button_text_send" />

        <TextView
            android:id="@+id/email_footer_tos_and_pp_text"
            style="@style/FirebaseUI.PrivacyFooter" />

    </LinearLayout>

</ScrollView>
