<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fui_bg_color"
    android:orientation="vertical">

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/top_progress_bar"
        style="@style/FirebaseUI.TopProgressBar"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:clipToPadding="false"
        tools:ignore="UselessParent">

        <LinearLayout
            style="@style/FirebaseUI.WrapperStyle"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TitleText"
                android:text="@string/fui_welcome_text"/>

            <TextView
                android:id="@+id/welcome_back_password_body"
                style="@style/FirebaseUI.Text.BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="false"
                app:layout_constraintTop_toBottomOf="@+id/heading"
                tools:text="@string/fui_welcome_back_password_api_prompt_body" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/FirebaseUI.TextInputLayout.EmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fui_field_padding_vert_6dp"
                android:transitionGroup="true"
                android:transitionName="@string/fui_email_field_name"
                android:visibility="gone"
                app:errorEnabled="true"
                tools:ignore="UnusedAttribute">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/FirebaseUI.TextInputEditText.EmailField" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                style="@style/FirebaseUI.TextInputLayout.NameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fui_field_padding_vert_6dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    style="@style/FirebaseUI.TextInputEditText.NameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/FirebaseUI.TextInputLayout.PasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fui_field_padding_vert_6dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/FirebaseUI.TextInputEditText.PasswordField" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_create"
                style="@style/FirebaseUI.Button.Dark"
                android:text="@string/fui_sign_up_text"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/email_footer_tos_and_pp_text"
                style="@style/FirebaseUI.PrivacyFooter" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

